<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.0.25">
  <DUT Name="T_POD" Id="{d5023c31-0777-4e70-9274-770f3c9fb1da}">
    <Declaration><![CDATA[TYPE T_POD :
STRUCT
	strAxisName: STRING(31);
	strState: STRING;
	strCmd: STRING;
	intCmd: INT;
	intServiceCmd: INT;
	stStatus: T_POD_Status;
	stMove: T_POD_Move;
	stErr: T_POD_Error;
	stCfg: T_POD_Cfg;
	stService: T_POD_Service;
END_STRUCT
END_TYPE
]]></Declaration>
    <ObjectProperties />
  </DUT>
</TcPlcObject>