<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.0.25">
  <DUT Name="T_POD_StateMachine" Id="{f62271a7-5f40-4c24-9dbc-13971324a749}">
    <Declaration><![CDATA[TYPE T_POD_StateMachine :
STRUCT
	///actual state
	intState: INT;
	///state of last cycle
	intStateLastCycle: INT;
	///save history backup p.e. in ERROR state
	intStateHistory: INT;
	///set state for next cycle
	intStateNext: INT;
END_STRUCT
END_TYPE
]]></Declaration>
    <ObjectProperties />
  </DUT>
</TcPlcObject>