<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.0.25">
  <DUT Name="T_Ctrl_SIf_GRN_Cfg" Id="{4330c1f4-231e-43ce-bcf1-0e60f4afa87b}">
    <Declaration><![CDATA[TYPE T_Ctrl_SIf_GRN_Cfg :
STRUCT
	rMaxFreq_Hz: REAL;
END_STRUCT
END_TYPE]]></Declaration>
    <ObjectProperties />
  </DUT>
</TcPlcObject>