<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.0.25">
  <DUT Name="T_Ctrl_SIf_GRN_In" Id="{22254ce4-f556-4683-82d2-1ce64b03f1a1}">
    <Declaration><![CDATA[TYPE T_Ctrl_SIf_GRN_In :
STRUCT
	bolSystemOk: T_Ctrl_IoBool;
	bolMainPressureError: T_Ctrl_IoBool;
	bolEoffOrFuseOk: T_Ctrl_IoBool;
	bolPowderLowWarning: T_Ctrl_IoBool;
	bolAutoMode: T_Ctrl_IoBool;
	intState: T_Ctrl_IoInt;
END_STRUCT
END_TYPE]]></Declaration>
    <ObjectProperties />
  </DUT>
</TcPlcObject>