<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.0.36">
  <DUT Name="E_ALM_GRR" Id="{2ddd3ec5-985c-4274-8386-49a72f6ef000}">
    <Declaration><![CDATA[TYPE E_ALM_GRR :
(
	NONE := 1,
	SystemError := 2,
	PressureError := 3,
	LowPowderWarning := 4,
	ManualModeWarning := 5,
	ManualModeError := 6,
	LostConnection := 7,
	MAX_E_ALM_GRR
) UINT;
END_TYPE]]></Declaration>
  </DUT>
</TcPlcObject>