<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.0.26">
  <DUT Name="T_Ctrl_SIf_GRR_Out" Id="{00082939-1afc-4599-9f00-17ccfe7e379a}">
    <Declaration><![CDATA[TYPE T_Ctrl_SIf_GRR_Out :
STRUCT
	intCommand						: BASE_PLC.T_Ctrl_IoInt;
	intConveyorBelt					: T_Ctrl_IoInt;
	intPowderVibrator				: T_Ctrl_IoInt;
	intConveyorVibrator				: T_Ctrl_IoInt;
	intAnalogValue					: T_Ctrl_IoInt;
	uinFilterClearingCycleTime_min	: T_Ctrl_IoUint;
	bolToggleBitGrr					: T_Ctrl_IoBool;
END_STRUCT
END_TYPE]]></Declaration>
    <ObjectProperties />
  </DUT>
</TcPlcObject>